This is an update to test push functionality

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 </head>
 <body>
 <p>This is about as basic as it gits.</p>
+<p>This change was made locally and pushed to Github in git.</p>
 </body>
 </html>
