--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 <p>This is about as basic as it gits.</p>
-<p>This change was made locally and pushed to Github in git.</p>
+<p>This change was made remotely and pushed to Github in a remote instance of git.</p>
+<p>This change was made on Github so that it can be pulled to the remote instance of git.</p>
 </body>
 </html>
